@@ -22,6 +22,8 @@ Version 1.3.15+svn:
    * During ai moves the source hex is no longer highlighted.
    * show unit standing animations and idle animations are now separate options
    * Removed broken "Host network game" option from multiplayer menu (bug #10800)
+   * Fixed network game creation return back to create dialog after failed
+     savegame loading
  * miscellaneous and bug fixes:
    * Fixed networking not to timeout with slow connections but timeout faster
      with lost connection (partialy fix bug #10967)
@@ -35,6 +37,7 @@ Version 1.3.15+svn:
    * Added some toys&whisles to unit tests
    * Added networking unit tests
    * Hide race sections having only units with "hide_help=true"
+   * Fixed ai handling of unit without attacking weapons (bug #10886)
    * Optimize roads placing of random map
    * when a unit miss an animation, the engine will base the replacement on
      the standing animation instead of the standing frame
